# SmartHome

./: .gitignore  CMakeLists.txt  README.md  README.txt  main.c  nrf52840dk_nrf52840.overlay  prj.conf
doc/: SmartHome_FlowChart.drawio
include/: bluetooth.h  buttons.h  dht22_sensor.h  ht16k33_led.h  led.h  my_service.h  sensors.h
src/: bluetooth.c  buttons.c  dht22_sensor.c  ht16k33_led.c  led.c  main.c  my_service.c  sensors.c
